fix: member card align fix & add underline for selected tab

--- a/mappafront/src/views/pages/members/style.scss
+++ b/mappafront/src/views/pages/members/style.scss
@@ -1,60 +1,68 @@
 @use "@/assets/mixins.scss" as *;
 @use "@/assets/variables.scss" as *;
 
-.container {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  align-items: start;
-
-  .navbar {
-    width: 20%;
+section.members-section {
+  .container {
+    width: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: start;
-    gap: 0.08rem;
 
-    .navbar-button {
-      background-color: transparent;
-      border: none;
-      :hover {
-        cursor: pointer;
-      }
-    }
-  }
-
-  .content-container {
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    gap: 0.4rem;
-
-    .subteam-container {
-      width: 100%;
+    .navbar {
+      width: 20%;
       display: flex;
       flex-direction: column;
-      gap: 0.2rem;
+      align-items: start;
+      gap: 0.08rem;
 
-      .members-container {
+      .navbar-button {
+        background-color: transparent;
+        border: none;
+        :hover {
+          cursor: pointer;
+        }
+        .active-button {
+          text-decoration: underline;
+        }
+      }
+    }
+
+    .content-container {
+      width: 80%;
+      display: flex;
+      flex-direction: column;
+      gap: 0.4rem;
+
+      .subteam-container {
         width: 100%;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        display: flex;
+        flex-direction: column;
+        gap: 0.2rem;
 
-        .member-container {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          gap: 0.08rem;
+        .members-container {
+          width: 100%;
+          display: grid;
+          grid-template-columns: repeat(3, 1fr);
+          gap: 0.2rem;
 
-          .image-container {
-            width: 1rem;
-            height: 1rem;
-            background-color: #d9d9d9;
-            border-radius: 50%;
-          }
-          .member-description {
-            color: #000;
-            font-style: italic;
+          .member-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 0.08rem;
+            width: fit-content;
+            min-width: 1.28rem;
+
+            .image-container {
+              width: 1rem;
+              height: 1rem;
+              background-color: #d9d9d9;
+              border-radius: 50%;
+            }
+            .member-description {
+              color: #000;
+              font-style: italic;
+            }
           }
         }
       }
